# nbody

./: Cargo.toml  README.md  shader.frag  shader.vert
src/: constants.rs  main.rs  simulation.rs  state.rs  utils.rs
src/primitives/: draw.rs  instance.rs  mod.rs  particle.rs  scalar.rs  vertex.rs
src/quadtree/: bounding_box.rs  mod.rs  quadtree.rs
src/shaders/: shader.vert
