[package]
authors = ["null-char <skp.frl@gmail.com>"]
edition = "2018"
name = "nbody"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.0"
cgmath = "0.18.0"
env_logger = "0.8.2"
futures = "0.3"
log = "0.4.0"
shaderc = "0.7.1"
wgpu = "0.7.0"
winit = "0.24.0"
